--- a/Editor/Ferdi.com.ferdi.gpm.Editor.asmdef
+++ b/Editor/Ferdi.com.ferdi.gpm.Editor.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Ferdi.com.ferdi.gpm.Editor"
+    "name": "Ferdi.com.ferdi.gpm.Editor",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
